ingress/ingress-bot-path.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: path-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /bot
        pathType: Prefix
        backend:
          service:
            name: microbot-service
            port:
              number: 80
